:bug: Fix wrong z-index

--- a/app/assets/stylesheets/components/_slider_results.sass
+++ b/app/assets/stylesheets/components/_slider_results.sass
@@ -107,7 +107,7 @@
                         color: #fff
                         top: 0
                         right: 0
-                        z-index: 999999
+                        z-index: 999
                         font-size: .7em
 
             .picture-highlight
